# prime

./: .dockerignore  .gitignore  CLAUDE.MD  CLAUDE.md  CLAUDE_MEMORY.md  COMPUTE_AUDIT.md  DEAD_CODE_AUDIT.md  DEMO_CHEATSHEET.md  Dockerfile  ENGINES.md  METHODOLOGIES.md  ORTHON_patent_claims_draft.md  PARALLEL_AUDIT.md  README.md  SQL_AUDIT.md  STABILITY_REPORT.md  TURBOFAN_STABILITY_REPORT.md  ZSCORE_AUDIT_PRIME.md  build_cycle_features.py  build_ml_features.py  convert_cmapss.py  evaluate_test.py  experiments_geometry_ladder.py  fly.toml  manifest.yaml  orthon_alphabet.md  pyproject.toml  railway.json  requirements.txt  roadmap.md  run  run_ablation.py  run_analysis.py  run_clean_ensemble.py  run_cycle_ml.py  run_fd002.py  run_full_ensemble.py  run_ml.py  run_window_sweep.py
.claude/: settings.local.json
PRISM_ORTHON_EXPANSION_PRs/: PR_MASTER_ROADMAP.md  PR_ORTHON_DYNAMICAL_SYSTEMS.md  PR_ORTHON_INFORMATION_INTERPRETATION.md  PR_ORTHON_TOPOLOGY_INTERPRETATION.md  PR_PRISM_DYNAMICS_ENGINE.md  PR_PRISM_INFORMATION_ENGINE.md  PR_PRISM_TOPOLOGY_ENGINE.md
data/benchmarks/: README.md
docs/: ARCHITECTURE.md  COHORT_DISCOVERY_V2.md  FD001_RESULTS.md  MANIFEST_CONTRACT.md  MANIFOLD_DERIVED_SQL.md  NORMALIZATION_ORTHON.md  PIPELINE.md  PIPELINE_ML.md  PR3_TYPOLOGY_CORRECTIONS.md  PR4_TYPOLOGY_CONFIG.md  STAGES_34_35_36.md  patent_technical_specification.md
docs/Historical/: BEARING_REVIEW.md  COHORT_DISCOVERY_V2.md  SPIN_GLASS_REPORT.md  STABILITY_REPORT.md  TURBOFAN_STABILITY_REPORT.md
fetchers/: __init__.py
framework/: __init__.py  cli.py
framework/cohorts/: detection.py  discovery.py
framework/config/: __init__.py  domains.py  engine_rules.yaml  recommender.py  stability_config.py  typology_config.py
framework/core/: __init__.py  data_reader.py  server.py
framework/early_warning/: __init__.py  failure_fingerprint_detector.py
framework/engines/: classification_engine.py  diagnostic_report.py  mass_engine.py  spin_glass.py  stability_engine.py  tipping_engine.py  trajectory_monitor.py  typology_engine.py
framework/entry_points/: __init__.py  stage_01_validate.py  stage_08_alert.py  stage_09_explore.py  stage_10_inspect.py  stage_12_stream.py
framework/explorer/: __init__.py  loader.py  models.py  server.py
framework/ingest/: README.md  data_reader.py  normalize.py  paths.py  streaming.py  transform.py  validate_observations.py  validation.py
framework/inspection/: __init__.py  file_inspector.py  results_validator.py
framework/manifest/: __init__.py  domain_clock.py  system_window.py  window_recommender.py
framework/ml/: __init__.py
framework/services/: __init__.py  fingerprint_service.py  job_manager.py  physics_interpreter.py
framework/shared/: __init__.py  config_schema.py  window_config.py
framework/sql/: README.md
framework/state/: __init__.py
framework/streaming/: __init__.py  analyzers.py  websocket_server.py
framework/typology/: constant_detection.py  control_detection.py  discrete_sparse.py  level2_corrections.py
ml/: ML_MANIFEST.md  lstm_prism_comparison.py  lstm_raw_comparison.py  xgboost_orthon_comparison.py  xgboost_orthon_cv.py
notebooks/: explore_domain.ipynb  explore_domain_executed.ipynb  fd001_rul_config4.ipynb  fd001_rul_config4_executed.ipynb  fd001_rul_v2.ipynb  fd001_rul_v2_executed.ipynb
orthon/: AI_README.md  __init__.py  api.py  app.py  cohort_discovery.py  data_reader.py  engine_rules.yaml  manifest_generator.py  pipeline.py  prism_client.py  server.py  validation.py  window_recommender.py
orthon/_archive_streamlit/: orthon_explorer.py
orthon/analysis/: __init__.py  baseline_discovery.py
orthon/backend/: __init__.py  bridge.py  fallback.py  remote.py
orthon/cohorts/: detection.py  discovery.py
orthon/compute/: __init__.py  prism_runner.py
orthon/config/: __init__.py  discrete_sparse_config.py  domains.py  manifest.py  manifest_schema.py  recommender.py  typology_config.py
orthon/core/: __init__.py  api.py  data_reader.py  pipeline.py  prism_client.py  server.py  validation.py
orthon/corrections/: __init__.py  level1_corrections.py  level2_corrections.py  manifest_corrections.py
orthon/dashboard/: __init__.py
prime/: __init__.py  __main__.py  cli.py  pipeline.py
scripts/: analyze.py  convert_sfi_datasets.py  export_classification.sql  generate_rossler.py  generate_sfi_datasets.py  generate_test_datasets.py  migrate_signal_0.py  process_all_domains.py  regenerate_manifests.py  run_orthon_pipeline.py  test_pipeline.py  transform_5g3e.py  update_imports.py
sql_reports/: baseline_geometry.sql  ff_stable_periods.sql  stable_baseline.sql  validation_thresholds.sql
streaming/: README.md  run.py
tests/: test_axis_selection.py  test_manifest_axis_metadata.py  test_manifest_generator.py  test_state_classification.py  test_typology_any_signal.py  test_typology_benchmarks.py  test_window_recommender.py
tools/: rerun_regime_export.py
(+667 files in other folders)
