[project]
name = "prime"
version = "2.5.0"
description = "Dynamical systems analysis framework. Classifies signals, generates manifests, interprets engine outputs."
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Jason Rudder", email = "jason@rudder.dev" }
]
keywords = ["dynamical-systems", "signal-classification", "typology", "time-series"]

dependencies = [
    "pmtvs",
    "pandas",
    "duckdb",
    "pyarrow",
    "pyyaml",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
prime = "prime.__main__:main"
prime-explorer = "prime.explorer.cli:main"
prime-config = "prime.ingest.data_reader:main"
prime-serve = "prime.core.api:main"

[project.entry-points."prime.domains"]
turbofan = "prime.config.domains:turbofan"
bearings = "prime.config.domains:bearings"
chemical = "prime.config.domains:chemical"
hydraulic = "prime.config.domains:hydraulic"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prime"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
