[project]
name = "prime"
version = "2.5.0"
description = "Dynamical systems analysis framework. Classifies signals, generates manifests, interprets engine outputs."
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Jason Rudder", email = "jason@rudder.dev" }
]
keywords = ["dynamical-systems", "signal-classification", "typology", "time-series"]

dependencies = [
    # Rust-backed primitives
    "pmtvs",

    # Data reading & storage
    "polars>=0.20.0",
    "duckdb>=0.10.0",
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "fastexcel>=0.11.0",
    "h5py>=3.10.0",

    # Numerical & scientific
    "numpy>=1.24.0",
    "scipy>=1.11.0",

    # Configuration
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",

    # Visualization
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
]
streaming = [
    "requests>=2.31.0",
    "psutil>=5.9.0",
]
ml = [
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "statsmodels>=0.14.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
all = [
    "prime[api,streaming,ml,dev]",
]

[project.scripts]
prime = "prime.__main__:main"
prime-explorer = "prime.explorer.cli:main"
prime-config = "prime.ingest.data_reader:main"
prime-serve = "prime.core.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prime"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
